[package]
name = "ser2tcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Robin Smidsrød <robin@smidsrod.no>"]
description = "Connect a serial port to TCP network listeners"
keywords = ["serial"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/robinsmidsrod/ser2tcp"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["from"] }
serialport = "4.7.2"
wild = "2.2.1"
